link cuda and gtest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,12 @@ cmake_minimum_required(VERSION 3.27)
 project(Warp_header)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CUDA_STANDARD 20)
 
-add_library(Warp_header STATIC library.cpp)
+enable_language(CUDA)
+find_package(CUDAToolkit)
+set(CMAKE_CUDA_ARCHITECTURES 90)
+include_directories(${CUDA_INCLUDE_DIRS})
+
+add_subdirectory(core)
+add_subdirectory(unittest)
